--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -10,7 +10,8 @@
 {% endblock %}
 {% block content %}
   {% if person %}
-    <div class="container">
+    <div class="container-fluid">
+      {% comment %} Display View options {% endcomment %}
       <div class="row">
         <div class="col align-self-start choose-view-container">
           <a href="#" class="btn btn-light">Focused View</a>
@@ -19,27 +20,29 @@
       </div>
 
       {% comment %}Display Parents{% endcomment %}
-      <div class="row aling-items-center" id="parents-container">
-        <div class="col" id="parents-list" style="display: none; margin-top: 1rem;">
+      <div class="row justify-content-center" id="parents-container">
+        <div class="col-12 justify-content-center" id="parents-list">
           {% for parent in person.parents.all %}
             {% include 'familytree/_person_card.html' with person=parent pov_id=person.id %}
           {% endfor %}
         </div>
 
-        {% if person.parents.all|length < 1 %}
-          <div class="col aling-items-center">
-            <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Parent">Add Parent</a>
-          </div>
-        {% else %}
-          <div class="col align-items-center">
-            <button class="btn btn-outline-success" onclick="toggleSection('parents-list')">Display Parents</button>
-            <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Parent">Add Parent</a>
-          </div>
-        {% endif %}
+        <div class="row justify-content-center">
+          {% if person.parents.all|length < 1 %}
+            <div class="col-2">
+              <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success m-2" aria-label="Add Parent">Add Parent</a>
+            </div>
+          {% else %}
+              <button class="btn btn-outline-success col-2 m-2" onclick="toggleSection('parents-list')">Display Parents</button>
+              <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Parent">Add Parent</a>
+          {% endif %}
+        </div>
       </div>
-      {% comment %}Display Siblings{% endcomment %}
-      <div class="row aling-items-center">
-        <div class="col" id="siblings-container">
+
+      {% comment %} Display middle-section {% endcomment %}
+      <div class="row justify-content-center">
+        {% comment %}Display Siblings{% endcomment %}
+        <div class="col-2" id="siblings-container">
           <div id="sibling-list" style="display: none; margin-top: 1rem;">
             {% for sibling in person.siblings.all %}
               {% include 'familytree/_person_card.html' with person=sibling pov_id=person.id %}
@@ -52,44 +55,49 @@
             <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Sibling">Add Sibling</a>
           {% endif %}
         </div>
-      </div>
 
-      <div class="col" id="middle-section">
-        {% comment %}Display Pov-Person{% endcomment %}
-        {% include 'familytree/_person_card.html' with person=person pov_id=person.id %}
-      </div>
-
-      {% comment %}Display Partner{% endcomment %}
-      <div class="col" id="partner-container">
-        <div id="partner-list" style="display: none; margin-top: 1rem;">
-          {% for partner in person.partners.all %}
-            {% include 'familytree/_person_card.html' with person=partner pov_id=person.id %}
-          {% endfor %}
+        <div class="col-8" id="middle-section">
+          {% comment %}Display Pov-Person{% endcomment %}
+          {% include 'familytree/_person_card.html' with person=person pov_id=person.id %}
         </div>
+        
+        {% comment %}Display Partner{% endcomment %}
+        <div class="col-2" id="partner-container">
+          <div id="partner-list" style="display: none; margin-top: 1rem;">
+            {% for partner in person.partners.all %}
+              {% include 'familytree/_person_card.html' with person=partner pov_id=person.id %}
+            {% endfor %}
+          </div>
 
-        {% if person.partner %}
-          <button class="btn btn-outline-success" onclick="toggleSection('partner-list')">Display Partner</button>
-        {% else %}
-          <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Partner">Add Partner</a>
-        {% endif %}
+          {% if person.partner %}
+            <button class="btn btn-outline-success" onclick="toggleSection('partner-list')">Display Partner</button>
+          {% else %}
+            <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Partner">Add Partner</a>
+          {% endif %}
+        </div>
       </div>
 
       {% comment %}Display Children{% endcomment %}
-      <div class="row align-items-center">
+      <div class="row justify-content-center">
         <div class="col" id="children-container">
           <div id="children-list" style="display: none; margin-top: 1rem;">
             {% for child in person.children.all %}
               {% include 'familytree/_person_card.html' with person=child pov_id=person.id %}
             {% endfor %}
           </div>
-
-          {% if person.children.all|length > 0 %}
+        </div>
+      </div>
+      <div class="row">
+        {% if person.children.all|length > 0 %}
+          <div class="col">
             <button class="btn btn-outline-success" onclick="toggleSection('children-list')">Display Children</button>
             <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Child">Add Child</a>
-          {% else %}
+          </div>
+        {% else %}
+          <div class="col">
             <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Child">Add Child</a>
-          {% endif %}
-        </div>
+          </div>
+        {% endif %}
       </div>
     </div>
     {% comment %}Redirect to add self if Person doesnt exist{% endcomment %}
