--- a/static/css/familytree/family_view.css
+++ b/static/css/familytree/family_view.css
@@ -9,36 +9,27 @@ body {
     background: linear-gradient(to bottom, #fdf7ec, #f3e5c1);
 }
 
-main{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-}
 
 .choose-view-container {
     align-self: start;
     margin: 6px 0 0 6px;
 }
 
-#parents-container, #children-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    gap: 10px;
+#parents-list, #children-list{
+    display: none;
 }
 
-#middle-section{
+#parents-container, #children-container{
+    margin: 5px 0 0 0;
+}
+
+/* #middle-section{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
     gap: 10px;
-}
+} */
 
 
