--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -11,7 +11,7 @@
 {% block content %}
   {% if person %}
     <div class="container-fluid">
-      {% comment %} Display View options {% endcomment %}
+      {% comment %}Display View options{% endcomment %}
       <div class="row">
         <div class="col align-self-start choose-view-container">
           <a href="#" class="btn btn-light">Focused View</a>
@@ -33,16 +33,16 @@
               <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success m-2" aria-label="Add Parent">Add Parent</a>
             </div>
           {% else %}
-              <button class="btn btn-outline-success col-2 m-2" onclick="toggleSection('parents-list')">Display Parents</button>
-              <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Parent">Add Parent</a>
+            <button class="btn btn-outline-success col-2 m-2" onclick="toggleSection('parents-list')">Display Parents</button>
+            <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Parent">Add Parent</a>
           {% endif %}
         </div>
       </div>
 
-      {% comment %} Display middle-section {% endcomment %}
+      {% comment %}Display middle-section{% endcomment %}
       <div class="row justify-content-center">
         {% comment %}Display Siblings{% endcomment %}
-        <div class="col-2" id="siblings-container">
+        <div class="col-4 d-flex align-self-center justify-content-center" id="siblings-container">
           <div id="sibling-list" style="display: none; margin-top: 1rem;">
             {% for sibling in person.siblings.all %}
               {% include 'familytree/_person_card.html' with person=sibling pov_id=person.id %}
@@ -56,13 +56,13 @@
           {% endif %}
         </div>
 
-        <div class="col-8" id="middle-section">
+        <div class="col-4 d-flex justify-content-center" id="middle-section">
           {% comment %}Display Pov-Person{% endcomment %}
           {% include 'familytree/_person_card.html' with person=person pov_id=person.id %}
         </div>
-        
+
         {% comment %}Display Partner{% endcomment %}
-        <div class="col-2" id="partner-container">
+        <div class="col-4 align-self-center d-flex justify-content-center" id="partner-container">
           <div id="partner-list" style="display: none; margin-top: 1rem;">
             {% for partner in person.partners.all %}
               {% include 'familytree/_person_card.html' with person=partner pov_id=person.id %}
@@ -78,28 +78,23 @@
       </div>
 
       {% comment %}Display Children{% endcomment %}
-      <div class="row justify-content-center">
-        <div class="col" id="children-container">
-          <div id="children-list" style="display: none; margin-top: 1rem;">
-            {% for child in person.children.all %}
-              {% include 'familytree/_person_card.html' with person=child pov_id=person.id %}
-            {% endfor %}
-          </div>
+      <div class="row justify-content-center" id="children-container">
+        <div class="col justify-content-center" id="children-list">
+          {% for child in person.children.all %}
+            {% include 'familytree/_person_card.html' with person=child pov_id=person.id %}
+          {% endfor %}
         </div>
       </div>
-      <div class="row">
+      <div class="row justify-content-center">
         {% if person.children.all|length > 0 %}
-          <div class="col">
-            <button class="btn btn-outline-success" onclick="toggleSection('children-list')">Display Children</button>
-            <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Child">Add Child</a>
-          </div>
+          <button class="btn btn-outline-success col-2 m-2" onclick="toggleSection('children-list')">Display Children</button>
+          <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Child">Add Child</a>
         {% else %}
-          <div class="col">
-            <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Child">Add Child</a>
-          </div>
+          <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Child">Add Child</a>
         {% endif %}
       </div>
     </div>
+
     {% comment %}Redirect to add self if Person doesnt exist{% endcomment %}
   {% else %}
     <div id="no-person-container">
