--- a/familytree/templates/familytree/family_view.html
+++ b/familytree/templates/familytree/family_view.html
@@ -27,13 +27,13 @@
           {% endfor %}
         </div>
 
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" id="parent-display-buttons">
           {% if person.parents.all|length < 1 %}
             <div class="col-2">
               <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success m-2" aria-label="Add Parent">Add Parent</a>
             </div>
           {% else %}
-            <button class="btn btn-outline-success col-2 m-2" onclick="toggleSection('parents-list')">Display Parents</button>
+            <button class="btn btn-outline-success col-2 m-2" onclick="toggleSection('parents-list', 'parent-display-buttons')">Display Parents</button>
             <a href="{% url 'add_family_member' %}?relation=parent&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Parent">Add Parent</a>
           {% endif %}
         </div>
@@ -48,12 +48,14 @@
               {% include 'familytree/_person_card.html' with person=sibling pov_id=person.id %}
             {% endfor %}
           </div>
-          {% if person.siblings|length > 0 %}
-            <button class="btn btn-outline-success" onclick="toggleSection('sibling-list')">Display Siblings</button>
-            <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Sibling">Add Sibling</a>
-          {% else %}
-            <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Sibling">Add Sibling</a>
-          {% endif %}
+          <div id="siblings-display-buttons">
+            {% if person.siblings|length > 0 %}
+              <button class="btn btn-outline-success m-2" onclick="toggleSection('sibling-list', 'siblings-display-buttons')">Display Siblings</button>
+              <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success m-2" aria-label="Add Sibling">Add Sibling</a>
+            {% else %}
+              <a href="{% url 'add_family_member' %}?relation=sibling&person_id={{ person.id }}" class="btn btn-outline-success m-2" aria-label="Add Sibling">Add Sibling</a>
+            {% endif %}
+          </div>
         </div>
 
         <div class="col-4 d-flex justify-content-center" id="middle-section">
@@ -68,12 +70,14 @@
               {% include 'familytree/_person_card.html' with person=partner pov_id=person.id %}
             {% endfor %}
           </div>
-
-          {% if person.partner %}
-            <button class="btn btn-outline-success" onclick="toggleSection('partner-list')">Display Partner</button>
-          {% else %}
-            <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Partner">Add Partner</a>
-          {% endif %}
+          <div id="partner-display-buttons">
+            {% if person.partner < 1 %}
+              <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Partner">Add Partner</a>
+            {% else %}
+              <button class="btn btn-outline-success" onclick="toggleSection('partner-list', 'partner-display-buttons')">Display Partner</button>
+              <a href="{% url 'add_family_member' %}?relation=partner&person_id={{ person.id }}" class="btn btn-outline-success" aria-label="Add Partner">Add Partner</a>
+            {% endif %}
+          </div>
         </div>
       </div>
 
@@ -85,9 +89,9 @@
           {% endfor %}
         </div>
       </div>
-      <div class="row justify-content-center">
+      <div class="row justify-content-center" id="children-display-buttons">
         {% if person.children.all|length > 0 %}
-          <button class="btn btn-outline-success col-2 m-2" onclick="toggleSection('children-list')">Display Children</button>
+          <button class="btn btn-outline-success col-2 m-2" onclick="toggleSection('children-list', 'children-display-buttons')">Display Children</button>
           <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Child">Add Child</a>
         {% else %}
           <a href="{% url 'add_family_member' %}?relation=child&person_id={{ person.id }}" class="btn btn-outline-success col-2 m-2" aria-label="Add Child">Add Child</a>
