--- a/static/css/familytree/_person_card.css
+++ b/static/css/familytree/_person_card.css
@@ -10,7 +10,7 @@
   text-align: center;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
   width: 300px;
-  height: 300px;
+  height: fit-content;
   transition: transform 0.2s ease;
 }
 
