--- a/static/css/familytree/family_view.css
+++ b/static/css/familytree/family_view.css
@@ -23,6 +23,10 @@ body {
     margin: 5px 0 0 0;
 }
 
+.hidden{
+    display: none;
+}
+
 /* #middle-section{
     display: flex;
     justify-content: center;
