--- a/familytree/templates/familytree/_person_card.html
+++ b/familytree/templates/familytree/_person_card.html
@@ -9,6 +9,7 @@
 
   <div class="person-info text-center">
     <h5>{{ person.first_name }} {{ person.last_name }}</h5>
+    <p>Nickname: {{person.nickname}}</p>
     <p>Birthday: {{person.birthday}}</p>
   </div>
 
