--- a/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
+++ b/peopleOfHistory/templates/peopleOfHistory/people_of_history.html
@@ -33,6 +33,7 @@
           <p class="mt-3">{{ person_of_history.story }}</p>
         </div>
       </div>
+    </div>
   {% else %}
     <p class="text-center text-muted">No historical figures available today.</p>
   {% endif %}
