--- a/static/css/familytree/_person_card.css
+++ b/static/css/familytree/_person_card.css
@@ -4,7 +4,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Underdog&display=swap');
 
---root{
+:root{
   --main-font: "Playfair", cursive;
   --secondary-font: "Merriweather", serif;
 }
@@ -59,7 +59,7 @@
 }
 
 .person-info h5 {
-  font-family: --main-font;
+  font-family: var(--main-font);
   color: white;
   font-size: 1.25rem;
   margin-bottom: 0.5rem;
