--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
 
     {% endblock %}
     {% comment %}jQuery CDN for Select2{% endcomment %}
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
     {% block form_media %}
 
     {% endblock %}
@@ -128,8 +128,8 @@
     </footer>
 
     {% comment %}Bootstrap JS CDN{% endcomment %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
-    <script src="{% static 'javascript/base.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous" defer></script>
+    <script src="{% static 'javascript/base.js' %}" defer></script>
     {% block javascript %}
 
     {% endblock %}
