--- a/static/css/base/base.css
+++ b/static/css/base/base.css
@@ -1,9 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-
 :root {
     --primary-color: #e1b522;
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  src: url('/static/fonts/meriweather.woff2') format('woff2');
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Playfair Display';
+  src: url('/static/fonts/playfair.woff2') format('woff2');
+  font-weight: 400;
+  font-display: swap;
 }
 
 body {
