--- a/static/css/familytree/_person_card.css
+++ b/static/css/familytree/_person_card.css
@@ -1,12 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Underdog&display=swap');
-
 :root{
   --main-font: "Playfair", cursive;
   --secondary-font: "Merriweather", serif;
+}
+
+@font-face {
+  font-family: 'Underdog';
+  src: url('/static/fonts/underdog.woff2') format('woff2');
+  font-weight: 400;
+  font-display: swap;
 }
 
 .person-card {
