--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 
     {% endblock %}
     {% comment %}jQuery CDN for Select2{% endcomment %}
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     {% block form_media %}
 
     {% endblock %}
